Refs #271572 - Report view - fix file download wrap on smaller screens.

--- a/src/components/theme/Views/styles.less
+++ b/src/components/theme/Views/styles.less
@@ -15,6 +15,7 @@
 }
 
 .file-download {
+  flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
   padding: 1em;
